<?xml version="1.0"?>
<package format="3">
  <name>cubemars_ak_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control hardware plugin for CubeMars AK-series actuators over SocketCAN</description>

  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
