<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_autonomy</name>
  <version>0.1.0</version>
  <description>Autonomy bringup for the rover: teleop/nav launch flows, Nav2 goal bridge, and odometry adapters.</description>

  <maintainer email="parallels@todo.todo">parallels</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rover_bringup</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
