<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.1</version>
  <description>Launch + controller configs for the rover</description>

  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- description + xacro execution -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rover_description</exec_depend>

  <!-- ros2_control runtime -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>cubemars_ak_hardware</exec_depend>

  <!-- controllers used in YAML -->
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
