<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.1</version>
  <description>Robot description (URDF/Xacro) for the rover</description>

  <maintainer email="you@yourdomain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
